@@ -997,12 +997,12 @@ static const canon_cap_t canon_model_capabilities[] =
     "i950", 3,
     842, INCH(17),
     10, 10, 9, 15,
-    &canon_MULTIPASS_MP150_slotlist,
+    &canon_MULTIPASS_MP900_slotlist,
     CANON_CAP_STD0|CANON_CAP_px|CANON_CAP_rr|CANON_CAP_I|CANON_CAP_BORDERLESS,0,
     2,0,
     control_cmd_PIXMA_iP2700,
     &canon_BJC_i950_modelist,
-    &canon_BJC_i320_paperlist,
+    &canon_BJC_i950_paperlist,
     &canon_BJC_i950_modeuselist,
     NULL,
     NULL,
@@ -1018,7 +1018,7 @@ static const canon_cap_t canon_model_capabilities[] =
     3,2, /* ESC (l and (P command lengths */
     control_cmd_PIXMA_iP2700,
     &canon_BJC_i960_modelist,
-    &canon_BJC_i450_paperlist,
+    &canon_BJC_i560_paperlist,
     &canon_BJC_i960_modeuselist,
     NULL,
     NULL,
